[package]
name = "purchase-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
sqlx = { version = "0.7.1", features = [
	"postgres",
	"runtime-tokio-rustls",
	"chrono",
	"bigdecimal",
] }
dotenvy = "0.15.7"
sha2 = "0.10.7"
hmac = "0.12.1"
poem = "3.1.12"
poem-openapi = { version = "5.1.16", features = ["openapi-explorer", "chrono"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.188", features = ["derive"] }
chrono = { version = "0.4.30", features = ["serde"] }
